Implemented basic Item loading

--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Game\Chat\Commands\MovementCommands.cs" />
     <Compile Include="Game\Globals.cs" />
     <Compile Include="Game\Managers\DataManager.cs" />
+    <Compile Include="Game\Managers\ItemManager.cs" />
     <Compile Include="Game\Managers\ObjectManager.cs" />
     <Compile Include="Game\Managers\SkillManager.cs" />
     <Compile Include="Game\Managers\SpawnManager.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Game\Managers\WorldManager.cs" />
     <Compile Include="Game\ObjectDefines\CreatureData.cs" />
     <Compile Include="Game\ObjectDefines\CreatureStats.cs" />
+    <Compile Include="Game\ObjectDefines\ItemData.cs" />
     <Compile Include="Game\Packets\PacketHandler\AuthenticationHandler.cs" />
     <Compile Include="Game\Packets\PacketHandler\CacheHandler.cs" />
     <Compile Include="Game\Packets\PacketHandler\CharacterHandler.cs" />
@@ -81,6 +83,7 @@
     <Compile Include="Game\Spawns\CreatureSpawn.cs" />
     <Compile Include="Game\WorldEntities\Character.cs" />
     <Compile Include="Game\WorldEntities\Creature.cs" />
+    <Compile Include="Game\WorldEntities\Item.cs" />
     <Compile Include="Game\WorldEntities\Skill.cs" />
     <Compile Include="Game\WorldEntities\Spell.cs" />
     <Compile Include="Game\WorldEntities\WorldObject.cs" />
