Added Error Messages to Default Output

--- a/Framework/Configs/RealmServer.conf
+++ b/Framework/Configs/RealmServer.conf
@@ -29,8 +29,8 @@ Bind.Port        = 3724
 #       LogLevel: 0x41 (NORMAL + DEBUG)
 #       LogLevel: 0xFF (All options added up)
 #   Default
-#       LogLevel: 0x9
+#       LogLevel: 0xB
 #
 ##########################################################################
 
-LogLevel = 0x9
+LogLevel = 0xB
