--- a/Framework/Configs/WorldServer.conf
+++ b/Framework/Configs/WorldServer.conf
@@ -41,8 +41,8 @@ GM.Command.Start   = "!"
 #       LogLevel: 0x41 (NORMAL + DEBUG)
 #       LogLevel: 0xFF (All options added up)
 #   Default
-#       LogLevel: 0x9
+#       LogLevel: 0xB
 #
 ##########################################################################
 
-LogLevel = 0x9
+LogLevel = 0xB
